fix dark mode

--- a/styles/global.css
+++ b/styles/global.css
@@ -29,7 +29,19 @@ body {
 }
 
 .dark body {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #111 300px),
-    fixed 0 0 / 20px 20px radial-gradient(#313131 1px, transparent 0),
-    fixed 10px 10px / 20px 20px radial-gradient(#313131 1px, transparent 0);
+  background: linear-gradient(to bottom, rgba(64, 63, 63, 0) 0%, #474646 300px),
+    fixed 0 0 / 20px 20px radial-gradient(#4d4b4b 1px, transparent 0),
+    fixed 10px 10px / 20px 20px radial-gradient(#454343 1px, transparent 0);
+}
+
+.dark .dark\:bg-dark {
+  background-color: #474545 !important;
+}
+
+.dark .text-gray-600 {
+  color: #d1d1d1 !important;
+}
+
+.dark .dark\:shadow-\[0_-12px_16px_\#111\] {
+  box-shadow: 0 -12px 16px #555555 !important;
 }
